<resources>
    <string name="app_name">Tsundoku</string>
    <string name="enter_title">Edit Title</string>
    <string name="enter_desc">Enter description</string>
    <string name="save">Save New Book</string>
    <string name="show_data">Show Data</string>
    <string name="my_lib">My Library</string>
    <string name="my_stats">Book Stats</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="shelf_stats">Shelf Stats</string>
    <string name="permission_denied_explanation">Locations permissions denied by user</string>
    <string name="hint_username">Enter username</string>
    <string name="shr_hint_password">Enter password</string>
    <string name="login_button_next">Login</string>
    <string name="login_button_cancel">Cancel</string>
    <string name="login_error_password">Password must be at least 6 characters</string>
    <string name="book_title">Book Title</string>
    <string name="sample_date_added">Date Added</string>
    <string name="sample_book_title">Book Title</string>
    <string name="create_account_button">Create Account</string>
    <string name="hint_email">Enter email</string>
    <string name="log_out">Log out</string>
    <string name="maps">My Bookstores</string>
    <string name="elliot_bay_books_location">Elliot Bay Books</string>
    <string name="third_place_books_location">Third Place Books</string>
    <string name="mercer_st_books_location">Mercer St Books</string>
    <string name="phinney_books_location">Phinney Books</string>
    <string name="channel_name">tsundoku_notifications</string>
    <string name="channel_description">tsundoku notifications</string>
</resources>
